force-app/main/default/objects/User_Trail__c/fields/Modulos_Completados__c.field-meta.xml
<CustomField>
    <fullName>Modulos_Completados__c</fullName>
    <label>Modulos Completados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>