force-app/main/default/objects/User_Trail__c/fields/Modulos_Totales__c.field-meta.xml
<CustomField>
    <fullName>Modulos_Totales__c</fullName>
    <formula>Trail__r.Modulos_Totales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modulos Totales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>