force-app/main/default/objects/User_Trail__c/fields/Progreso__c.field-meta.xml
<CustomField>
    <fullName>Progreso__c</fullName>
    <formula>Modulos_Completados__c /  Modulos_Totales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progreso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>