force-app/main/default/objects/User_Trail__c/listViews/My_Trails.listView-meta.xml
<ListView>
    <fullName>My_Trails</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Trail__c</columns>
    <columns>Puntos__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mis Trails</label>
</ListView>